Add authentication Traits

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "psr-4": {
             "Controllers\\": "controllers",
             "Models\\": "models",
-            "Config\\": "config"
+            "Config\\": "config",
+            "Traits\\": "traits"
         }
     }
 }
