--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "require": {
         "firebase/php-jwt": "^5.1",
-        "steampixel/simple-php-router": "^0.7.0",
-        "pecee/simple-router": "4.3.2.1"
+        "pecee/simple-router": "4.3.2.1",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "App\\":"app",
-            "Config\\": "config"
+            "App\\":"app/",
+            "Config\\": "config/"
         }
     }
 }
